@@ -22,6 +22,7 @@ install:
 	install -m 644 utils/tagmap.py /usr/lib/python$(MAJOR).$(MINOR)/dist-packages/ftransc/utils
 	install -m 644 utils/convert.py /usr/lib/python$(MAJOR).$(MINOR)/dist-packages/ftransc/utils
 	touch /usr/lib/python$(MAJOR).$(MINOR)/dist-packages/ftransc/__init__.py
+	{ which rhythmbox && cp -r plugins/ftransc /usr/lib/rhythmbox/plugins; } || :
 
 uninstall:
 	rm -f /usr/local/bin/ftransc
@@ -31,3 +32,4 @@ uninstall:
 	rm -r -f ~/.gnome2/nautilus-scripts/ftransc
 	rm -r -f /etc/ftransc
 	rm -r -f /usr/lib/python$(MAJOR).$(MINOR)/dist-packages/ftransc
+	rm -r -f /usr/lib/rhythmbox/plugins/ftransc
