@@ -2,15 +2,17 @@
 
 import os
 import sys
+import copy
 from subprocess import Popen, PIPE
 from PyQt4 import QtCore, QtGui
 
-VERSION = '4.3.3'
+VERSION = '4.3.4'
 
 class Window(QtGui.QDialog):
-    def __init__(self, parent=None):
+    def __init__(self, parent=None, cmdlinefiles=None):
         super(Window, self).__init__(parent)
-
+        
+        self.cmdlinefiles = cmdlinefiles
         add_files_button = self.createButton("&Add Files", self.add_files)
         convert_button   = self.createButton("Conv&ert", self.convert)
         cancel_button    = QtGui.QPushButton("&Close")
@@ -112,15 +114,25 @@ class Window(QtGui.QDialog):
                      QtGui.qApp, 
                      QtCore.SLOT('quit()'))
 
-    def add_files(self):
-        filt = "All Files (*)";
-        filt += ";;Audio Files (*.mp3 *.wma *.aac *.mp4 *.m4a *.flac *.ogg"
-        filt += " *.mpc *.mka *.mp+ *.ape *.wv *.wav *.aiff)"
-        filt += ";;Video Files (*.avi *.flv *.mpg *.mpeg *.vob *.divx *.mkv *.mp4)"
-        files = QtGui.QFileDialog.getOpenFileNames(self,
-                                                   'Add files to convert',
-                                                   QtCore.QDir.currentPath(),
-                                                   filt)
+        if self.cmdlinefiles:
+            self.add_files(noninteractive=True)
+
+    def add_files(self, noninteractive=False):
+        if noninteractive:
+            files = copy.deepcopy(self.cmdlinefiles)
+            for idx in xrange(len(files)):
+                if files[idx].startswith('file://'):
+                    files[idx] = files[idx].replace('file://', '')
+            self.cmdlinefiles = []
+        else:
+            filt = "All Files (*)";
+            filt += ";;Audio Files (*.mp3 *.wma *.aac *.mp4 *.m4a *.flac *.ogg"
+            filt += " *.mpc *.mka *.mp+ *.ape *.wv *.wav *.aiff)"
+            filt += ";;Video Files (*.avi *.flv *.mpg *.mpeg *.vob *.divx *.mkv *.mp4)"
+            files = QtGui.QFileDialog.getOpenFileNames(self,
+                                                      'Add files to convert',
+                                                       QtCore.QDir.currentPath(),
+                                                       filt)
 
         for i in files:
             fname = QtGui.QTableWidgetItem(i)
@@ -201,7 +213,7 @@ class Window(QtGui.QDialog):
 
 if __name__ == '__main__':
     app = QtGui.QApplication(sys.argv)
-    window = Window()
+    window = Window(cmdlinefiles=sys.argv[1:])
     window.show()
     sys.exit(app.exec_())
 
