@@ -1,0 +1,15 @@
+[Plugin]
+Loader=python
+Module=ftransc
+IAge=2
+Depends=rb
+Name=ftransc Audio Converter
+Name[en_GB]=ftransc Audio Converter
+Description=Convert selected tracks to other formats like MP3, OGG, WMA, AAC, etc
+Description[en_GB]=Convert selected tracks to other formats like MP3, OGG, WMA, AAC, etc
+Authors=Mkhanyisi Madlavana <mmadlavana@gmail.com>
+Copyright=Copyright © 2012 Mkhanyisi Madlavana
+Website=http://code.google.com/p/ftransc
+
+[RB]
+InitiallyEnabled=true
