@@ -1,3 +1,7 @@
+ftransc 4.3.4 (30 Jun 2012):
+	+ added Rhythmbox plugin
+	+ fixed fatal KeyError when converting to .mpc format
+
 ftransc 4.3.3 (25 Mar 2012):
 	+ fixed fatal KeyError when converting .aac and .mp4 files
 
